--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -1,5 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
@@ -11,19 +12,21 @@
     <ul class="navbar-nav mr-auto">
 
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['home']" routerLinkActive="active" >Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" [routerLink]="['home']" routerLinkActive="active">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" [routerLink]="['heroes']"  routerLinkActive="active">Heroes</a>
-        </li>
+        <a class="nav-link" [routerLink]="['heroes']" routerLinkActive="active">Heroes</a>
+      </li>
       <li class="nav-item">
         <a class="nav-link" [routerLink]="['about']" routerLinkActive="active">About</a>
       </li>
-      
+
     </ul>
     <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" (keyup.enter)="searchHero(searchText.value)"
+        #searchText>
+      <button class="btn btn-outline-success my-2 my-sm-0" type="button"
+              (click)="searchHero(searchText.value)">Search</button>
     </form>
   </div>
 </nav>
