feature: Publish app to Docker Hub

--- a/src/app/components/heroe/heroe.component.html
+++ b/src/app/components/heroe/heroe.component.html
@@ -11,7 +11,7 @@
       <h3>{{heroe.nombre | uppercase}} <small class="text-muted">({{heroe.aparicion | date:'y'}})</small></h3>
     </div>
     <p>{{heroe.bio}}</p>
-    <img class="img-logo" *ngIf="heroe.casa == 'DC' " src="../../../assets/images/dc.png" [alt]="heroe.nombre">
-    <img class="img-logo" *ngIf="heroe.casa == 'Marvel' " src="../../../assets/images/marvel.png" [alt]="heroe.nombre">
+    <img class="img-logo" *ngIf="heroe.casa == 'DC' " src="../../assets/images/dc.png" [alt]="heroe.nombre">
+    <img class="img-logo" *ngIf="heroe.casa == 'Marvel' " src="../../assets/images/marvel.png" [alt]="heroe.nombre">
   </div>
 </div>
