--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -5,7 +5,7 @@
   </button>
 
   <a class="navbar-brand" href="#">
-    <img src="../../../../assets/images/A-64.png" width="30" height="30" alt="">
+    <img src="../../../assets/images/A-64.png" width="30" height="30" alt="">
   </a>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
